--- a/service.html
+++ b/service.html
@@ -69,7 +69,7 @@
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <img src="/laundry-service-website-template/img/logo.jpg" alt="Bubbles Cleaning Company">
+                    <img src="/img/logo.jpg" alt="Bubbles Cleaning Company">
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -191,6 +191,68 @@
     </div>
     <!-- Services End -->
 
+        <!-- Pricing Plan Start -->
+    <div class="container-fluid pt-5 pb-3">
+        <div class="container">
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Our Pricing Plan</h6>
+            <h1 class="display-4 text-center mb-5">The Best Price</h1>
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="bg-light text-center mb-2 pt-4">
+                        <div class="d-inline-flex flex-column align-items-center justify-content-center bg-secondary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                            <h3 class="text-white">Basic</h3>
+                            <h1 class="display-4 text-white mb-0">
+                                <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>49<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Mo</small>
+                            </h1>
+                        </div>
+                        <div class="d-flex flex-column align-items-center py-3">
+                            <p>HTML5 & CSS3</p>
+                            <p>Bootstrap 4</p>
+                            <p>Responsive Layout</p>
+                            <p>Compatible With All Browsers</p>
+                        </div>
+                        <a href="" class="btn btn-secondary py-2 px-4">Signup Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="bg-light text-center mb-2 pt-4">
+                        <div class="d-inline-flex flex-column align-items-center justify-content-center bg-primary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                            <h3 class="text-white">Standard</h3>
+                            <h1 class="display-4 text-white mb-0">
+                                <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>99<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Mo</small>
+                            </h1>
+                        </div>
+                        <div class="d-flex flex-column align-items-center py-3">
+                            <p>HTML5 & CSS3</p>
+                            <p>Bootstrap 4</p>
+                            <p>Responsive Layout</p>
+                            <p>Compatible With All Browsers</p>
+                        </div>
+                        <a href="" class="btn btn-primary py-2 px-4">Signup Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="bg-light text-center mb-2 pt-4">
+                        <div class="d-inline-flex flex-column align-items-center justify-content-center bg-secondary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                            <h3 class="text-white">Premium</h3>
+                            <h1 class="display-4 text-white mb-0">
+                                <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>149<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Mo</small>
+                            </h1>
+                        </div>
+                        <div class="d-flex flex-column align-items-center py-3">
+                            <p>HTML5 & CSS3</p>
+                            <p>Bootstrap 4</p>
+                            <p>Responsive Layout</p>
+                            <p>Compatible With All Browsers</p>
+                        </div>
+                        <a href="" class="btn btn-secondary py-2 px-4">Signup Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Pricing Plan End -->
+    
     <!-- Testimonial Start -->
     <div class="container-fluid py-5">
         <div class="container">
