--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <i class="fa fa-2x fa-map-marker-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="text-white font-weight-medium">Our Location</h5>
-                            <p class="m-0 text-white">Location, City, Country</p>
+                            <p class="m-0 text-white">Harare, Zimbabwe</p>
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                         <i class="fa fa-2x fa-envelope text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="text-white font-weight-medium">Email Us</h5>
-                            <p class="m-0 text-white">info@example.com</p>
+                            <p class="m-0 text-white">bubble@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         <i class="fa fa-2x fa-phone-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="text-white font-weight-medium">Call Us</h5>
-                            <p class="m-0 text-white">+012 345 6789</p>
+                            <p class="m-0 text-white">077345356</p>
                         </div>
                     </div>
                 </div>
