--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DRYME - Free Laundry Service Website Template</title>
+    <title>Bubble Cleaning Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Bubbles Cleaning Company" name="keywords">
     <meta content="Bubbles Cleaning Company" name="description">
