--- a/pricing.html
+++ b/pricing.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DRYME - Free Laundry Service Website Template</title>
+    <title>BUBBLE CLEANING COMPANY</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="BUBBLE CLEANING COMPANY" name="keywords">
+    <meta content="BUBBLE CLEANING COMPANY" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
