--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
                     <h1 class="mb-4">We Are Quality Laundry Provider In Your City</h1>
                     <h5 class="font-weight-medium font-italic mb-4">Clita sit et ipsum sed. Volup duo sea dolor rebum ea rebum kasd stet. Dolor at duo dolor sit stet.</h5>
-                    <p class="mb-2">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <p class="mb-2">Revolutionize your cleaning experience with us! We prioritize eco-friendly practices, delivering high-quality service using sustainable products. Choose cleanliness that cares for the planet at Bubbles"</p>
                     <div class="row">
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
@@ -201,7 +201,7 @@
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Highly Professional Staff</p>
+                                <p class="text-secondary font-weight-medium m-0">Environmentally Aware</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
