--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
                     <h1 class="mb-4">We Are Quality Laundry Provider In Your City</h1>
-                    <h5 class="font-weight-medium font-italic mb-4">Clita sit et ipsum sed. Volup duo sea dolor rebum ea rebum kasd stet. Dolor at duo dolor sit stet.</h5>
-                    <p class="mb-2">Revolutionize your cleaning experience with us! We prioritize eco-friendly practices, delivering high-quality service using sustainable products. Choose cleanliness that cares for the planet at Bubbles"</p>
+                    <h5 class="font-weight-medium font-italic mb-4"> We're proud to be eco-friendly, using sustainable products to deliver top-notch cleaning.</h5>
+                    <p class="mb-2">Revolutionize your cleaning experience with us! We prioritize eco-friendly practices, delivering high-quality service using sustainable products. Choose cleanliness that cares for the planet at Bubbles.</p>
                     <div class="row">
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
