--- a/about.html
+++ b/about.html
@@ -126,8 +126,8 @@
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
                     <h1 class="mb-4">We Are Quality Laundry Provider In Your City</h1>
-                    <h5 class="font-weight-medium font-italic mb-4">Clita sit et ipsum sed. Volup duo sea dolor rebum ea rebum kasd stet. Dolor at duo dolor sit stet.</h5>
-                    <p class="mb-2">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <h5 class="font-weight-medium font-italic mb-4"> We're proud to be eco-friendly, using sustainable products to deliver top-notch cleaning that's good for your home and the planet..</h5>
+                    <p class="mb-2">Revolutionize your cleaning experience with us! We prioritize eco-friendly practices, delivering high-quality service using sustainable products. Choose cleanliness that cares for the planet at Bubbles</p>
                     <div class="row">
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
@@ -212,7 +212,7 @@
                 <div class="col-lg-7 m-0 my-lg-5 pt-0 pt-lg-5 pr-lg-5">
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Our Features</h6>
                     <h1 class="mb-4">Why Choose Us</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <p>Experience excellence with us! Our seasoned team brings years of expertise, ensuring top-tier service that goes beyond clean. Trust in our experience for a spotless and satisfying result every time.</p>
                     <div class="row">
                         <div class="col-sm-6 mb-4">
                             <h1 class="text-secondary" data-toggle="counter-up">10</h1>
