--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
                                     <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
                                 </div>
-                                <h5 class="font-weight-medium m-0 mt-2">Location, City, Country</h5>
+                                <h5 class="font-weight-medium m-0 mt-2">Harare, Zimbabwe</h5>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -135,7 +135,7 @@
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
                                     <i class="fa fa-2x fa-envelope-open text-secondary"></i>
                                 </div>
-                                <h5 class="font-weight-medium m-0 mt-2">info@example.com</h5>
+                                <h5 class="font-weight-medium m-0 mt-2">bubbles@gmail.com</h5>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -143,7 +143,7 @@
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
                                     <i class="fa fa-2x fa-phone-alt text-secondary"></i>
                                 </div>
-                                <h5 class="font-weight-medium m-0 mt-2">+012 345 6789</h5>
+                                <h5 class="font-weight-medium m-0 mt-2">0773456734</h5>
                             </div>
                         </div>
                     </div>
