--- a/pricing.html
+++ b/pricing.html
@@ -131,12 +131,11 @@
                             </h1>
                         </div>
                         <div class="d-flex flex-column align-items-center py-3">
-                            <p>HTML5 & CSS3</p>
-                            <p>Bootstrap 4</p>
-                            <p>Responsive Layout</p>
-                            <p>Compatible With All Browsers</p>
+                            <p>Machine Washing & Drying</p>
+                            <p>Folding</p>
+                            <p>Basic Stain Treatment</p>
                         </div>
-                        <a href="" class="btn btn-secondary py-2 px-4">Signup Now</a>
+                        <a href="" class="btn btn-secondary py-2 px-4">Book Now</a>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
@@ -148,12 +147,12 @@
                             </h1>
                         </div>
                         <div class="d-flex flex-column align-items-center py-3">
-                            <p>HTML5 & CSS3</p>
-                            <p>Bootstrap 4</p>
-                            <p>Responsive Layout</p>
-                            <p>Compatible With All Browsers</p>
+                            <p>Machine Washing & Drying</p>
+                            <p>Folding</p>
+                            <p>Basic Stain Treatment</p>
+                            <p>Faster turnaround time</p>
                         </div>
-                        <a href="" class="btn btn-primary py-2 px-4">Signup Now</a>
+                        <a href="" class="btn btn-primary py-2 px-4">Book Now</a>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
@@ -165,10 +164,10 @@
                             </h1>
                         </div>
                         <div class="d-flex flex-column align-items-center py-3">
-                            <p>HTML5 & CSS3</p>
-                            <p>Bootstrap 4</p>
-                            <p>Responsive Layout</p>
-                            <p>Compatible With All Browsers</p>
+                            <p>Gentle machine washing</p>
+                            <p>Handwashing for delicate items</p>
+                            <p>Premium detergents and fabric softeners</p>
+                            <p>Detailed folding</p>
                         </div>
                         <a href="" class="btn btn-secondary py-2 px-4">Signup Now</a>
                     </div>
