--- a/pricing.html
+++ b/pricing.html
@@ -131,7 +131,8 @@
                             </h1>
                         </div>
                         <div class="d-flex flex-column align-items-center py-3">
-                            <p>Machine Washing & Drying</p>
+                            <p>Machine Washing</p>
+                            <p>Drying</p>
                             <p>Folding</p>
                             <p>Basic Stain Treatment</p>
                         </div>
@@ -147,7 +148,7 @@
                             </h1>
                         </div>
                         <div class="d-flex flex-column align-items-center py-3">
-                            <p>Machine Washing & Drying</p>
+                            <p>Machine Washing</p>
                             <p>Folding</p>
                             <p>Basic Stain Treatment</p>
                             <p>Faster turnaround time</p>
