--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <div class="testimonial-item">
                     <img class="position-relative rounded-circle bg-white shadow mx-auto" src="img/testimonial-2.jpg" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1;" alt="">
                     <div class="bg-light text-center p-4 pt-0">
-                        <h5 class="font-weight-medium mt-5">Emmanuel Adams</h5>
+                        <h5 class="font-weight-medium mt-5">Michelle Adams</h5>
                         <p class="text-muted font-italic">Since 2018</p>
                         <p class="m-0">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor ipsum clita</p>
                     </div>
