--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Michael Adams</h5>
                         <p class="text-muted font-italic">Since 2015</p>
-                        <p class="m-0">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor ipsum clita</p>
+                        <p class="m-0">"Bubbles made laundry a joy! Fast service, crisp folds. Highly recommend for stress-free freshness. Laundry day transformed. A++!</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
@@ -368,7 +368,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Michelle Adams</h5>
                         <p class="text-muted font-italic">Since 2018</p>
-                        <p class="m-0">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor ipsum clita</p>
+                        <p class="m-0">Bubbles exceeded expectations! Luxury care revived my clothes. Meticulous and affordable. Laundry transformed into pampering. Highly recommend their premium services!</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
@@ -376,7 +376,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Madison Miller</h5>
                         <p class="text-muted font-italic">SInce 2020</p>
-                        <p class="m-0">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor ipsum clita</p>
+                        <p class="m-0">Bubbles Luxury Care saved my wardrobe! Stains vanished, fabrics revitalized. Exceptional service worth every penny. Highly recommend their premium laundry care!</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
@@ -384,7 +384,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Jay Rhodes</h5>
                         <p class="text-muted font-italic">Profession</p>
-                        <p class="m-0">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor ipsum clita</p>
+                        <p class="m-0">Game-changer! Bubbles Convenient Care Plan - effortless laundry. Regular pickups, on-time deliveries, impeccable cleaning. </p>
                     </div>
                 </div>
             </div>
