--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Michael Adams</h5>
                         <p class="text-muted font-italic">Since 2015</p>
-                        <p class="m-0">"Bubbles made laundry a joy! Fast service, crisp folds. Highly recommend for stress-free freshness. Laundry day transformed. A++!</p>
+                        <p class="m-0">Bubbles made laundry a joy! They have a fast service and also crisp folds. Highly recommend for stress-free freshness. Laundry day transformed. A++!</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
@@ -384,7 +384,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Jay Rhodes</h5>
                         <p class="text-muted font-italic">Profession</p>
-                        <p class="m-0">Game-changer! Bubbles Convenient Care Plan - effortless laundry. Regular pickups, on-time deliveries, impeccable cleaning. </p>
+                        <p class="m-0">Game-changer! Bubbles Convenient Care Plan - effortless laundry. Regular pickups, on-time deliveries, impeccable cleaning. Their servce is amazing! </p>
                     </div>
                 </div>
             </div>
