--- a/pricing.html
+++ b/pricing.html
@@ -69,7 +69,7 @@
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <img src="/laundry-service-website-template/img/logo.jpg" alt="Bubbles Cleaning Company">
+                    <img src="img/logo.jpg" alt="Bubbles Cleaning Company">
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
