--- a/single.html
+++ b/single.html
@@ -9,7 +9,7 @@
     <meta content="Bubbles Cleaning Company" name="description">
 
     <!-- Favicon -->
-    <link href="/img/icon.svg" rel="icon">
+    <link href="img/icon.svg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
